add prettier config

--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "name": "video-platform",
   "version": "1.0.0",
-  "description": "",
+  "description": "a backend application",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.0.2",
+    "prettier": "^3.1.1"
+  }
 }
